# infini-craft

./: README.md
data/: infini-craft-custom-train-inverse.jsonl  infini-craft-custom-train.jsonl
loras/: .gitignore  README.md
models/: .gitignore  README.md
scripts/: .gitignore  README.md  pyproject.toml
scripts/infini_craft/: evaluate_llama_gpt.py  server.py  train_add.py  train_split.py
ui/: README.md  bun.lockb  index.html  package.json
ui/public/: 404.html  CNAME
ui/src/: App.tsx  index.scss  main.tsx
ui/src/assets/: discovery.flac  error.flac  first_plop.flac  fourth_plop.flac  new.flac  second_plop.flac
ui/src/hooks/: useDocumentTitle.tsx
ui/src/routes/: LandingRoute.module.css  LandingRoute.tsx
